--- a/requirements.txt
+++ b/requirements.txt
@@ -1,109 +1,169 @@
-absl-py
-ale-py
-appnope 
-asttokens 
-AutoROM
-AutoROM.accept-rom-license
-backcall 
-backports.functools-lru-cache 
-box2d-py
-cachetools
-certifi
-charset-normalizer
-click
-cloudpickle 
-colorama 
-comm 
-contourpy 
-cycler 
-debugpy 
-decorator
-exceptiongroup 
-executing 
-Farama-Notifications 
-filelock 
-fonttools 
-fsspec
-gmpy2 
-google-auth
-google-auth-oauthlib
-grpcio
-gymnasium 
-huggingface-hub
-huggingface-sb3
-idna
-imageio
-imageio-ffmpeg
-importlib-metadata 
-importlib-resources
-ipykernel 
-ipython 
-ipywidgets 
-jax-jumpy 
-jedi 
-Jinja2 
-jupyter_client 
-jupyter_core 
-jupyterlab-widgets 
-kiwisolver 
-Markdown
-markdown-it-py
-MarkupSafe 
-matplotlib 
-matplotlib-inline 
-mdurl
-moviepy
-mpmath 
-munkres
-nest-asyncio 
-networkx 
-numpy 
-oauthlib
-opencv-python
-packaging 
-pandas 
-parso 
-pexpect 
-pickleshare 
-Pillow 
-platformdirs 
-proglog
-prompt-toolkit 
-protobuf
-psutil 
-ptyprocess 
-pure-eval 
-pyasn1
-pyasn1-modules
-pygame
-Pygments 
-pyparsing 
-python-dateutil 
-pytz 
-PyVirtualDisplay
-PyYAML 
-pyzmq 
-requests
-requests-oauthlib
-rich
-rsa
-Shimmy
-six 
-stable-baselines3
-stack-data 
-swig
-sympy 
-tensorboard
-tensorboard-data-server
-torch
-tornado 
-tqdm 
-traitlets 
-typing_extensions 
-tzdata 
-urllib3
-wasabi
-wcwidth 
-Werkzeug
-widgetsnbextension 
-zipp 
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-arm64
+absl-py=1.4.0=pypi_0
+ale-py=0.8.1=pypi_0
+appnope=0.1.3=pyhd8ed1ab_0
+asttokens=2.4.0=pyhd8ed1ab_0
+autorom=0.6.1=pypi_0
+autorom-accept-rom-license=0.6.1=pypi_0
+backcall=0.2.0=pyh9f0ad1d_0
+backports=1.0=pyhd8ed1ab_3
+backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
+box2d-py=2.3.5=pypi_0
+brotli=1.1.0=hb547adb_0
+brotli-bin=1.1.0=hb547adb_0
+bzip2=1.0.8=h3422bc3_4
+ca-certificates=2023.7.22=hf0a4a13_0
+cachetools=5.3.1=pypi_0
+certifi=2023.7.22=pyhd8ed1ab_0
+charset-normalizer=3.2.0=pypi_0
+click=8.1.7=pypi_0
+cloudpickle=2.2.1=pyhd8ed1ab_0
+colorama=0.4.6=pyhd8ed1ab_0
+comm=0.1.4=pyhd8ed1ab_0
+contourpy=1.1.1=py311he4fd1f5_0
+cycler=0.11.0=pyhd8ed1ab_0
+debugpy=1.8.0=py311ha891d26_0
+decorator=4.4.2=pypi_0
+docopt=0.6.2=pypi_0
+exceptiongroup=1.1.3=pyhd8ed1ab_0
+executing=1.2.0=pyhd8ed1ab_0
+farama-notifications=0.0.4=pyhd8ed1ab_0
+filelock=3.12.4=pyhd8ed1ab_0
+fonttools=4.42.1=py311heffc1b2_0
+freetype=2.12.1=hadb7bae_2
+fsspec=2023.9.1=pypi_0
+gmp=6.2.1=h9f76cd9_0
+gmpy2=2.1.2=py311h2ba9262_1
+google-auth=2.23.0=pypi_0
+google-auth-oauthlib=1.0.0=pypi_0
+grpcio=1.58.0=pypi_0
+gymnasium=0.28.1=py311h8d5925d_0
+huggingface-hub=0.17.2=pypi_0
+huggingface-sb3=3.0=pypi_0
+idna=3.4=pypi_0
+imageio=2.31.3=pypi_0
+imageio-ffmpeg=0.4.9=pypi_0
+importlib-metadata=6.8.0=pyha770c72_0
+importlib-resources=6.0.1=pypi_0
+importlib_metadata=6.8.0=hd8ed1ab_0
+ipykernel=6.25.2=pyh1050b4e_0
+ipython=8.15.0=pyh31c8845_0
+ipywidgets=8.1.1=pyhd8ed1ab_0
+jax-jumpy=1.0.0=pyhd8ed1ab_0
+jedi=0.19.0=pyhd8ed1ab_0
+jinja2=3.1.2=pyhd8ed1ab_1
+jupyter_client=8.3.1=pyhd8ed1ab_0
+jupyter_core=5.3.1=py311h267d04e_0
+jupyterlab_widgets=3.0.9=pyhd8ed1ab_0
+kiwisolver=1.4.5=py311he4fd1f5_0
+lcms2=2.15=h40e5a24_2
+lerc=4.0.0=h9a09cb3_0
+libblas=3.9.0=18_osxarm64_openblas
+libbrotlicommon=1.1.0=hb547adb_0
+libbrotlidec=1.1.0=hb547adb_0
+libbrotlienc=1.1.0=hb547adb_0
+libcblas=3.9.0=18_osxarm64_openblas
+libcxx=16.0.6=h4653b0c_0
+libdeflate=1.19=hb547adb_0
+libexpat=2.5.0=hb7217d7_1
+libffi=3.4.2=h3422bc3_5
+libgfortran=5.0.0=13_2_0_hd922786_1
+libgfortran5=13.2.0=hf226fd6_1
+libjpeg-turbo=2.1.5.1=hb547adb_1
+liblapack=3.9.0=18_osxarm64_openblas
+libopenblas=0.3.24=openmp_hd76b1f2_0
+libpng=1.6.39=h76d750c_0
+libsodium=1.0.18=h27ca646_1
+libsqlite=3.43.0=hb31c410_0
+libtiff=4.6.0=h77c4dce_1
+libwebp-base=1.3.2=hb547adb_0
+libxcb=1.15=hf346824_0
+libzlib=1.2.13=h53f4e23_5
+llvm-openmp=16.0.6=h1c12783_0
+markdown=3.4.4=pypi_0
+markdown-it-py=3.0.0=pypi_0
+markupsafe=2.1.3=py311heffc1b2_0
+matplotlib-base=3.7.2=py311h3bc9839_0
+matplotlib-inline=0.1.6=pyhd8ed1ab_0
+mdurl=0.1.2=pypi_0
+moviepy=1.0.3=pypi_0
+mpc=1.3.1=h91ba8db_0
+mpfr=4.2.0=he09a6ba_0
+mpmath=1.3.0=pyhd8ed1ab_0
+munkres=1.1.4=pyh9f0ad1d_0
+ncurses=6.4=h7ea286d_0
+nest-asyncio=1.5.6=pyhd8ed1ab_0
+networkx=3.1=pyhd8ed1ab_0
+numpy=1.26.0=py311hb8f3215_0
+oauthlib=3.2.2=pypi_0
+opencv-python=4.8.0.76=pypi_0
+openjpeg=2.5.0=h4c1507b_3
+openssl=3.1.2=h53f4e23_0
+packaging=23.1=pyhd8ed1ab_0
+pandas=2.1.0=py311h9e438b8_0
+parso=0.8.3=pyhd8ed1ab_0
+pexpect=4.8.0=pyh1a96a4e_2
+pickleshare=0.7.5=py_1003
+pillow=10.0.1=py311he9c13d2_0
+pip=23.2.1=pyhd8ed1ab_0
+pipreqs=0.4.13=pypi_0
+platformdirs=3.10.0=pyhd8ed1ab_0
+proglog=0.1.10=pypi_0
+prompt-toolkit=3.0.39=pyha770c72_0
+prompt_toolkit=3.0.39=hd8ed1ab_0
+protobuf=4.24.3=pypi_0
+psutil=5.9.5=py311he2be06e_0
+pthread-stubs=0.4=h27ca646_1001
+ptyprocess=0.7.0=pyhd3deb0d_0
+pure_eval=0.2.2=pyhd8ed1ab_0
+pyasn1=0.5.0=pypi_0
+pyasn1-modules=0.3.0=pypi_0
+pygame=2.1.3=pypi_0
+pygments=2.16.1=pyhd8ed1ab_0
+pyparsing=3.0.9=pyhd8ed1ab_0
+python=3.11.5=h47c9636_0_cpython
+python-dateutil=2.8.2=pyhd8ed1ab_0
+python-tzdata=2023.3=pyhd8ed1ab_0
+python_abi=3.11=3_cp311
+pytorch=2.2.0.dev20230918=py3.11_0
+pytz=2023.3.post1=pyhd8ed1ab_0
+pyvirtualdisplay=3.0=pypi_0
+pyyaml=6.0.1=py311heffc1b2_0
+pyzmq=25.1.1=py311hb1af645_0
+readline=8.2=h92ec313_1
+requests=2.31.0=pypi_0
+requests-oauthlib=1.3.1=pypi_0
+rich=13.5.3=pypi_0
+rsa=4.9=pypi_0
+setuptools=68.2.2=pyhd8ed1ab_0
+shimmy=0.2.1=pypi_0
+six=1.16.0=pyh6c4a22f_0
+stable-baselines3=2.0.0a5=pypi_0
+stack_data=0.6.2=pyhd8ed1ab_0
+swig=4.1.1=pypi_0
+sympy=1.12=pypyh9d50eac_103
+tensorboard=2.14.0=pypi_0
+tensorboard-data-server=0.7.1=pypi_0
+tk=8.6.12=he1e0b03_0
+tornado=6.3.3=py311heffc1b2_0
+tqdm=4.66.1=pyhd8ed1ab_0
+traitlets=5.10.0=pyhd8ed1ab_0
+typing-extensions=4.8.0=hd8ed1ab_0
+typing_extensions=4.8.0=pyha770c72_0
+tzdata=2023c=h71feb2d_0
+urllib3=1.26.16=pypi_0
+wasabi=1.1.2=pypi_0
+wcwidth=0.2.6=pyhd8ed1ab_0
+werkzeug=2.3.7=pypi_0
+wheel=0.41.2=pyhd8ed1ab_0
+widgetsnbextension=4.0.9=pyhd8ed1ab_0
+xorg-libxau=1.0.11=hb547adb_0
+xorg-libxdmcp=1.1.3=h27ca646_0
+xz=5.2.6=h57fd34a_0
+yaml=0.2.5=h3422bc3_2
+yarg=0.1.9=pypi_0
+zeromq=4.3.4=hbdafb3b_1
+zipp=3.16.2=pyhd8ed1ab_0
+zstd=1.5.5=h4f39d0f_0
